// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposals/Header Author Loading smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        short title
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-success btn-sm align-middle cursor-default"
          >
            <svg xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 18 18"
                 class="h-5 w-5 flex-none fill-success-content pt-1"
            >
              <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
              </path>
            </svg>
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 3 months ago
        </div>
        <div class="inline align-middle">
          <div class="skeleton inline-block h-3 w-20 pb-2">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Long Details smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        rather long title that goes on and on and on and on and on and on...
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-success btn-sm align-middle cursor-default"
          >
            <svg xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 18 18"
                 class="h-5 w-5 flex-none fill-success-content pt-1"
            >
              <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
              </path>
            </svg>
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened a minute ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Long and No Spaces smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        LongNameLongNameLongNameLongNameLongNameLongNameLongNameLongNameL...
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-success btn-sm align-middle cursor-default"
          >
            <svg xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 18 18"
                 class="h-5 w-5 flex-none fill-success-content pt-1"
            >
              <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
              </path>
            </svg>
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 3 months ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Short Details smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        short title
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-success btn-sm align-middle cursor-default"
          >
            <svg xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 18 18"
                 class="h-5 w-5 flex-none fill-success-content pt-1"
            >
              <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
              </path>
            </svg>
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 7 days ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header loading smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div>
        <div class="skeleton h-7 w-60 pt-1">
        </div>
        <div class>
          <div class="skeleton mt-3 inline-block h-8 w-20 align-middle">
          </div>
          <div class="skeleton ml-3 mt-5 inline-block h-3 w-28 align-middle">
          </div>
          <div class="skeleton ml-3 mt-5 inline-block h-3 w-28 align-middle">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
